<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FaceBundyActivity">
    <RelativeLayout
        android:id="@+id/camera_controls"
        android:layout_marginBottom="@dimen/camera_control_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/imgSwitchCamera"
            android:layout_marginLeft="12dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_width="32dp"
            android:src="@drawable/switch_camera"/>
        <TextView android:id="@+id/tvProject"
            android:layout_centerVertical="true"
            android:paddingLeft="12dp"
            android:text="Project:"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner android:id="@+id/spnProject"
            android:gravity="center"
            android:visibility="gone"
            android:layout_toRightOf="@id/imgSwitchCamera"
            android:layout_toLeftOf="@+id/date_Container"
            android:entries="@array/projects"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
        <LinearLayout
            android:id="@+id/date_Container"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvDate"
                android:text="Feb 18, 2015"
                android:textSize="@dimen/date_font_size"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvTime"
                android:text="00:00:00"
                android:layout_gravity="right"
                android:textSize="@dimen/time_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/camera_container"
        android:layout_below="@+id/camera_controls"
        android:layout_above="@+id/button_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.neurotec.biometrics.view.NFaceView
                android:id="@+id/camera_view"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.neurotec.biometrics.view.NFaceView>

            <LinearLayout
                android:id="@+id/app_date_time_container"
                android:padding="8dp"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_app_date"
                    android:text="Feb 18, 2015"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/date_font_size"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_app_time"
                    android:text="00:00:00"
                    android:textColor="@color/light_gray"
                    android:layout_gravity="right"
                    android:textSize="@dimen/time_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_above="@+id/edtAccessCode"
        android:id="@+id/button_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnTimeIn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/capture_button_height"
            android:background="@color/pale_green"
            android:textSize="@dimen/capture_button_size"
            android:text="@string/button_text_timein" />
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnTimeOut"
            android:layout_weight="1"
            android:textSize="@dimen/capture_button_size"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/capture_button_height"
            android:background="@color/pale_red"
            android:text="@string/button_text_timeout" />
    </LinearLayout>
    <EditText android:id="@+id/edtAccessCode"
        android:gravity="center"
        android:inputType="number"
        android:layout_margin="8dp"
        android:maxLength="4"
        android:layout_alignParentBottom="true"
        android:hint="@string/access_code_hint"
        android:textSize="@dimen/access_code_input_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/buttonFloatEnroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/camera_container"
        android:layout_marginLeft="24dp"
        android:background="#1E88E5"
        materialdesign:animate="true"
        materialdesign:iconDrawable="@drawable/ic_action_add" />
    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/buttonFloatCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/edtAccessCode"
        android:layout_marginRight="24dp"
        android:background="#1E88E5"
        materialdesign:animate="true"
        materialdesign:iconDrawable="@drawable/ic_action_camera" />
</RelativeLayout>
